# nmc-first-steps

./: CMakeLists.txt  Makefile  README.asciidoc  readme.asciidoc
step01/: step01.asciidoc
step03/: step3.S
step04/: step4.S
step04a/: step4a.S
step06a/: step6a.S
step06b/: step6b.S
step07/: step7.S
step08/: step8.S
step09/: step9.S
step10/: main.cpp  step10.S
step11/: main.cpp
step12/: main.cpp  step12.S
step13a/Include/: macros.h
steps-fixed/: README.asciidoc
steps-fixed/step04a/: README.asciidoc  step4a.S
steps-fixed/stepi04a/: README.asciidoc  step4a.S
steps-fixed/stepi05/: README.asciidoc  step5.S
steps-fixed/stepi06/: README.asciidoc  step6.S
steps-fixed/stepi06a/: README.asciidoc  step6a.S
steps-fixed/stepi06b/: README.asciidoc  step6b.S
steps-fixed/stepi07/: README.asciidoc  main.cpp
steps-fixed/stepi08/: README.asciidoc  main.cpp  step8.S
steps-fixed/stepi09/: README.asciidoc  main.cpp  step9.S
steps-fixed/stepi10/: README.asciidoc  main.cpp  step10.S
steps-fixed/stepi11/: README.asciidoc  step11.S
steps-fixed/stepi12/: README.asciidoc  step12.S
steps-fixed/stepi13/: README.asciidoc  main.cpp  step13.S
steps-fixed/stepi13a/: README.asciidoc  main.cpp  step13a.S
steps-fixed/stepi14/: README.asciidoc  Step14.cfg  step14.S
steps-float/: README.asciidoc
steps-float/stepf02/: accmul.S  buffers.S  main.c
steps-float/stepf02a/: accmul.S  buffers.S  main.c  main.cpp
steps-float/stepf02b/: accmul.S  main.c
steps-risc/: README.asciidoc
steps-risc/step00/: main.cpp
steps-risc/step01/: README.asciidoc  step01.asciidoc  step1.S  step1.asciidoc
steps-risc/step02/: README.asciidoc  step02.S  step2.S
steps-risc/step03/: README.asciidoc  step3.S
steps-risc/step03a/: README.asciidoc  step3a.S
steps-risc/step04/: README.asciidoc  step4.S
templates/: Makefile.in  build.bat.in  build.sh.in  mc12101-nmpu0.lds  mc12101-nmpu1.lds  mc12705.lds  qemu-nm6407i.lds  run.bat.in  run.sh.in
templates/mc12101-nmpu1/: Makefile.in
templates/qemu/: Makefile.in
